# MavixBoard

./: .env-example  .gitignore  CHANGELOG.md  HARDWARE_SETUP.md  README.md  TECHNICAL.md  USER_GUIDE.md  WEBRTC_TURN_NOTES.md  pyproject.toml
src/mavixboard/: __main__.py  config.py  coordinator.py  log.py
src/mavixboard/core/: config.py  glib_loop.py  logger.py
src/mavixboard/fc/: controllers.py  crsf.py  detect.py  mavlink.py  service.py
src/mavixboard/gstreamer/: camera.py  gstreamer.py  pipeline.py  watcher.py
src/mavixboard/server/: api.py  enroll.py  signal_client.py
src/mavixboard/token/: generator.py  storage.py  store.py
src/mavixboard/webrtc/: channels.py  manager.py  peer.py
tests/: conftest.py  test_api.py  test_backoff.py  test_config.py  test_coordinator.py  test_coordinator_config.py  test_enroll.py  test_glib_loop.py  test_gstreamer.py  test_signal_client.py  test_token_generator.py  test_token_store.py  test_watcher.py
tests/test_fc/: test_controllers.py  test_crsf.py  test_detect.py  test_mavlink.py  test_service.py
tests/test_webrtc/: test_channels.py  test_manager.py  test_manager_fc.py  test_peer.py
