[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mavixboard"
version = "0.1.0"
description = "MavixBoard — a Mavix dashboard application"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "AurunChill" }]
dependencies = [
    "python-dotenv>=1.0,<2.0",
    "aiohttp>=3.9",
    "PyGObject>=3.44",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "aioresponses>=0.7",
    "ruff>=0.9",
    "mypy>=1.10",
    "pygobject-stubs>=2.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "aioresponses>=0.7",
    "ruff>=0.9",
    "mypy>=1.10",
    "pygobject-stubs>=2.0",
]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["mavixboard"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing"
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
